Fix types of inputs covered by basic input styles
Former-commit-id: 957ec4d4692cf65aeb3b5e9e185184e579e4b692

--- a/src/main/java/com/fave100/client/resources/css/global.css
+++ b/src/main/java/com/fave100/client/resources/css/global.css
@@ -33,16 +33,40 @@ a:hover {
 	text-decoration: underline;
 }
 
-input[type=text], select {
+input[type=text],
+input[type=password],
+input[type=search],
+input[type=url],
+input[type=tel],
+input[type=number],
+input[type=color],
+input[type=email],
+select {
 	padding: 4px;	
 	border: 1px solid #AAA;
 }
 
-input[type=text]:hover, select:hover {
+input[type=text]:hover,
+input[type=password]:hover,
+input[type=search]:hover,
+input[type=url]:hover,
+input[type=tel]:hover,
+input[type=number]:hover,
+input[type=color]:hover,
+input[type=email]:hover,
+select:hover {
 	border-color: #666;
 }
 
-input[type=text]:focus, select:focus {
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=search]:focus,
+input[type=url]:focus,
+input[type=tel]:focus,
+input[type=number]:focus,
+input[type=color]:focus,
+input[type=email]:focus,
+select:focus {
 	border-color: #5A9DE8;
 }
 
